# technopro-food-package

./: .gitignore  README.md  pyproject.toml
notebook/: ConvNextV2.ipynb  ConvNextV2CV.ipynb  EfficientNetModel.ipynb  EfficientNetV2Model.ipynb  Eva02Model.ipynb  PackageModel.ipynb  RegNetY128Model.ipynb  ResNet152Model.ipynb  SwinV1Model.ipynb  SwinV2Comparison.ipynb  SwinV2Model.ipynb  SwinV2ModelCV.ipynb  ViTH14Model.ipynb  ViTH14ModelCV.ipynb  ViTL16Model.ipynb  ViTL16ModelCV.ipynb  ensemble.ipynb  model.ipynb  test.ipynb
src/: prepare_data.py  run_exp.py  run_predict.py  run_prepare.py  run_train.py  train_model.py
src/classes/: PackageDataset.py  PackageNet.py
src/models/ConvNextV2/: Dataset.py  predict.py  train.py  train_cv.py
src/models/EfficientNetModel/: Dataset.py  predict.py  train.py
src/models/EfficientNetV2Model/: Dataset.py  predict.py  train.py
src/models/Eva02Model/: Dataset.py  predict.py  train.py  train_cv.py
src/models/PackageModel/: Dataset.py  predict.py  train.py
src/models/RegNetY128Model/: Dataset.py  predict.py  train.py
src/models/ResNet152Model/: Dataset.py  predict.py  train.py
src/models/SwinV2Model/: Dataset.py  predict.py  train.py  train_cv.py
src/models/ViTH14Model/: Dataset.py  predict.py  train.py  train_cv.py
src/models/ViTL16Model/: Dataset.py  predict.py  train.py  train_cv.py
src/scripts/: predict.py  train.py  train_rs.py
src/utils/: logger.py  mixup.py  rocstar.py  set_seed.py  show_graph.py
