[project]
name = "technopro-food-package"
version = "0.1.0"
description = ""
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "scikit-learn>=1.3.0",
    "torch==2.0.1+cu118",
    "torchaudio==2.0.2+cu118",
    "torchvision==0.15.2+cu118",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.25.1",
    "signate>=9.9.10",
]

[tool.rye.scripts]
prepare = { cmd = "python ./src/prepare_data.py" }
train = { cmd = "python ./src/train_model.py" }
predict = { cmd = "python ./src/run_predict.py" }

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"

[[tool.rye.sources]]
name = "cudf"
url = "https://pypi.nvidia.com"
type = "index"

[tool.hatch.metadata]
allow-direct-references = true
